tests/samples/valid/pointer_to_mut.pn
fn foo(x: &i32)
{
	x = 200;
}

fn main()
{
	var x: i32 = 17;
	var y: &i32 = &x;
	y = 33;
	foo(&x);
	return: x
}
