tests/samples/invalid/change_view_address.pn
fn main()
{
	var x: (i16) = 0x0;
	&x = 0x20;
}
